--- a/src/Topup/Topupstyle.css
+++ b/src/Topup/Topupstyle.css
@@ -1,28 +1,28 @@
-.des-topup-top{
-    background: #FFFFFF;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
-    border-radius: 10px;
-    margin-top: 10px;
-} 
-
-.des-topup{
-    border: none !important;
-    color:none !important;
-    font-size: 16px;
-    line-height: 27px;
-    align-items: center;
-    color: #7A7886;
+.des-personal {
+  background: #ffffff;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  margin-top: 10px;
 }
 
-.num-topup{
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 25px;
-    color: #6379F4;
-    padding-right:30px;
+.description {
+  border: none !important;
+  color: none !important;
+  font-size: 16px;
+  line-height: 27px;
+  align-items: center;
+  color: #7a7886;
+}
+
+.num-topup {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 25px;
+  color: #6379f4;
+  padding-right: 30px;
 }
 
 .bg-root {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+  padding-left: 20px;
+  padding-right: 20px;
+}
